# g2py

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  switch-claude-provider.sh
container/: Dockerfile  build.sh
docs/: APPLE-CONTAINER-NETWORKING.md  ARCHITECTURE.md  CHANNEL-MANAGEMENT.md  DEBUG_CHECKLIST.md  FAQ.md  HEARTBEAT.md  MEMORY.md  REQUIREMENTS.md  SECURITY.md  SKILLS-ARCHITECTURE.md  SPEC.md
groups/global/: CLAUDE.md
groups/main/: CLAUDE.md
launchd/: com.g2.plist
repo-tokens/: README.md  action.yml
scripts/: apply_skill.py  generate_ci_matrix.py  generate_resolutions.py  rebase.py  run_ci_tests.py  uninstall_skill.py  update_core.py
skills_engine/: __init__.py  apply.py  backup.py  constants.py  customize.py  file_ops.py  fs_utils.py  init.py  lock.py  manifest.py  merge.py  migrate.py  path_remap.py  rebase.py  replay.py  resolution_cache.py  state.py  structured.py  types.py  uninstall.py  update.py
src/g2/: __main__.py  app.py  types.py
tests/: conftest.py
tests/test_execution/: test_output_parser.py  test_queue.py
tests/test_groups/: test_authorization.py  test_repository.py
tests/test_infrastructure/: test_config.py  test_database.py
tests/test_ipc/: test_dispatcher.py
tests/test_messaging/: test_formatter.py  test_repository.py
tests/test_scheduling/: test_repository.py  test_task_service.py
tests/test_sessions/: test_manager.py
tests/test_skills/: conftest.py  test_apply.py  test_backup.py  test_ci_matrix.py  test_constants.py  test_customize.py  test_file_ops.py  test_lock.py  test_manifest.py  test_merge.py  test_path_remap.py  test_rebase.py  test_replay.py  test_resolution_cache.py  test_state.py  test_structured.py  (+2 more)
(+58 files in other folders)
